# Volta

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLEANUP_CHECKLIST.md  Cargo.toml  DECISIONS.md  LICENSE  README.md  REFACTOR_SUGGESTIONS.md  bacon.toml  bench.sh  build.rs  justfile  scrapboard.md
.claude/: settings.local.json
.github/workflows/: audit.yml  ci.yml
benches/: conv_algorithms.rs  gpu_comparison.rs  neural_networks.rs  tensor_ops.rs
dev-docs/: ARCHITECTURE.md  BENCHMARKING.md  CONV2D_IMPLEMENTATION.md  DEVELOPMENT.md
docs/: CLEANUP_CHECKLIST.md  GPU_SUPPORT_NEXT.md  PRODUCTIONIZING.md  REFACTOR_SUGGESTIONS.md  REPO_HEALTH.md  SENIOR_REPORT.md  VOLTA_ANALYSIS_REPORT.md  VOLTA_ERRORS.md  gpu_batch_processing_analysis.md  improvement-plan.md  portfolio-positioning-checklist.md  what_i_know.md
docs/analysis/: compile_time_safety.md
docs/plans/: 2026-02-23-async-strategy-analysis.md  2026-02-23-isolated-async-implementation.md
examples/: char_language_model.rs  char_transformer_model.rs  dcgan.rs  gpu.rs  gpu_training.rs  layernorm_demo.rs  load_external_mnist.rs  mnist_cnn.rs  mnist_rnn.rs  readme-1.rs  readme-2.rs  regression.rs  showcase.rs  super_resolution.rs  time_sequence.rs  vae.rs
notes/: ADAPTATION_ACCURACY.md  BIG_REPORT_PROMPT.md  SENIOR_REPORT.md  TODO.md  TORCH_EXAMPLES_NEXT.md  scrapboard.md
responses/: FEATURE_WORKFLOW_ANALYSIS.md  MiniGradPlayground-claude.md  claude-on-gpu-integration.md  gpu-recommendations.md  practical-tests-glm-45.md  status-report.md  testing-improvements.md
scripts/: export_pytorch_mnist.py
src/: autograd.rs  device.rs  dtype.rs  error.rs  io.rs  lib.rs  notes.rs  storage.rs  tensor.rs
src/data/: mnist.rs  mod.rs  transforms.rs
src/gpu/: buffer.rs  context.rs  early_warning.rs  kernels.rs  mod.rs  monitor.rs  pool.rs  staging_pool.rs  system_monitor.rs
src/gpu/shaders/: binary_backward.wgsl  binary_backward_safe.wgsl  col2im.wgsl  conv_backward_input.wgsl  conv_backward_weight.wgsl  direct_conv.wgsl  elementwise.wgsl  igemm.wgsl  igemm_backward_input.wgsl  igemm_backward_weight.wgsl  im2col.wgsl  matmul.wgsl  matmul_backward.wgsl  movement.wgsl  movement_backward.wgsl  optimizer_step.wgsl  reduce.wgsl  reduce_backward.wgsl  unary.wgsl  unary_backward.wgsl
src/io/: config.rs  mapping.rs
src/nn/: mod.rs
src/nn/layers/: batchnorm.rs  conv.rs  conv_transpose.rs  dropout.rs  embedding.rs  flatten.rs  gelu.rs  layernorm.rs  linear.rs  lstm.rs  maxpool.rs  mod.rs  pixelshuffle.rs  relu.rs  sequential.rs  sequential_builder.rs  sigmoid.rs  tanh.rs
src/nn/optim/: adam.rs  mod.rs  muon.rs  sgd.rs
src/nn/transformer/: attention.rs  block.rs  feed_forward.rs  mask.rs  mod.rs  multi_head_attention.rs  positional_encoding.rs
src/ops/: binary.rs  gpu_ops.rs  matmul.rs  mod.rs  movement.rs  reduce.rs  ternary.rs  unary.rs
src/utils/: mod.rs  progress.rs
sys-prompts/: err-sys-prompt.md  gpu-sys-prompt.md  readme-sys-prompt.md  status-sys-prompt.md  sys-prompt.md
tests/: coverage_fill.rs  gpu_smoke_test.rs  gpu_stress.rs  gpu_stress_test.rs  gpu_test.rs  gpu_unary_test.rs  improvements_test.rs  movement_backward_test.rs  parity_binary.rs  parity_matmul.rs  parity_movement.rs  parity_reduce.rs  parity_unary.rs  test_error_paths.rs  test_lstm.rs  test_optimizers.rs  test_serialization.rs
tests/common/: mod.rs
